# 2023-schedule

./: README.md  csv2json.py  data.dzn  example.json  main.py  model.mzn  pyproject.toml
