[tool.poetry]
name = "2023-schedule"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "AGPL-3"
readme = "README.md"
packages = [{include = "2023_schedule"}]

[tool.poetry.dependencies]
python = "^3.10"
minizinc = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
